unpackaged/main/default/objects/UniqueEntry__Contact_Additional_Address__c/UniqueEntry__Contact_Additional_Address__c.object-meta.xml
<CustomObject>
    <label>Contact Additional Address</label>
    <nameField>
        <label>Contact Additional Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Additional Addresses</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>