unpackaged/main/default/objects/UniqueEntry__Contact_Additional_Address__c/fields/UniqueEntry__City__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__City__c</fullName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>