unpackaged/main/default/objects/UniqueEntry__Contact_Additional_Address__c/fields/UniqueEntry__Contact__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Additional Addresses</relationshipLabel>
    <relationshipName>Contact_Additional_Addresses2</relationshipName>
    <type>Lookup</type>
</CustomField>