unpackaged/main/default/objects/UniqueEntry__Contact_Additional_Address__c/fields/UniqueEntry__StatePicklist__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__StatePicklist__c</fullName>
    <label>StatePicklist</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>UniqueEntry__CountryPicklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New York</fullName>
                <default>true</default>
                <label>New York</label>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Ontario</fullName>
            </value>
            <value>
                <fullName>O&#39; Brian</fullName>
            </value>
            <value>
                <fullName>La&#39;Henry</fullName>
            </value>
            <value>
                <fullName>Missouri</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>