unpackaged/main/default/objects/UniqueEntry__Contact_Additional_Address__c/fields/UniqueEntry__Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Zip_Postal_Code__c</fullName>
    <label>Zip_Postal_Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>